# Django-event-management

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  pyproject.toml
core/apps/api/: pagination.py  serializers.py  urls.py
core/apps/auth/: adapters.py
core/apps/common/: fields.py  models.py
core/apps/emails/: apps.py  utils.py
core/apps/emails/templates/templated_email/: email_confirmation.email  event_creation_notification.email
core/apps/events/: admin.py  apis.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py
core/apps/events/migrations/: 0001_initial.py
core/apps/users/: admin.py  models.py
core/apps/users/migrations/: 0001_initial.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
core/project/settings/: local_example.py  main.py
docker_compose/: backend.yaml  database.yaml
